0223 retrofit2 post 통신함 data store 추가했는데 뭔가 이상함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LitmusCloudCloneCoding</string>
+    <string name="notice">안녕하세요, \n리트머스클라우드 모니터링 서비스입니다. \n제공해드린 계정 정보로 로그인하세요. \n로그인하시면 이용약관과 개인정보처리방침에 동의하신 것으로 간주합니다.</string>
 </resources>
